# PythonProgramming

./: README.md  d  functions_emre_bicer.py  info_hamza_kiziltoprak.py  info_zeynepreyyan_kaleli.py  pyramid_batintahaonal.py  sequences_esra_basoglu.py  types_emir_karaduman.py  types_muratemirhan_burgacoglu.py  types_yusuf_hastoprak.py
.github/: info_dilara_ağaç.py
Projects/: .gitignore  firebase.json  readme
Week01/: 210316026_alperen_cetin.py  Create info_Kaan_Durusoy.py  Muhammet_Gulden.py  Syllabus.docx  forkingOperation_batintaha_onal.txt  infi_buse_demirbas.py  info_Bugra_UZUN.py  info_Deniz_Karakaş.py  info_Egemen_Darilmaz.py  info_Mehmet_Toygun_Tutuk.py  info_MuhammedSalih_Yesilay.py  info_Olcay_MUTLU.py  info_Turhan_Gunduzoglu  info_abdulatif_favaz.py  info_ahmet_alp_ozdemir  info_ahmetyusuf_dursun.py  info_alper_tekin.py  info_ardadeniz_kinikli.py  info_ayberk_bayçın.py  info_aysegul_yildiz.py  info_aysenur_sariot.py  info_berk_altay.py  info_berke_alpaslan.py  info_bugra_kafa.py  info_burakcan_aksoy.py  info_burakhan_gultoplar.py  info_ege_enc.py  info_ege_karataş.py  info_egehan_isik.py  info_elif_yalvac  info_elifsude_yilmaz.py  info_emine_cetin.py  info_emir_karaduman.py  info_emrecan_akgül.py  info_eray_guler.py  info_eren_malkoc.py  info_ertugrul_kose.py  info_ferhat_baydir.py  info_firstname_lastname.py  info_furkan_bulut.py  (+37 more)
Week02/: Create types_Kaan_Durusoy.py  Week2_Variables_batintaha_onal.py  create type_ensar_bastopcu.py  (+147 more)
Week06/: LICENSE  README.md  pyproject.toml
Week06/src/boracanbula/: statistics.py
Week06/tests/: test_statistics.py
(+422 files in other folders)
