[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boracanbula"
version = "0.0.1"
authors = [
    { name = "Bora Canbula", email = "bora.canbula@cbu.edu.tr" },
]
description = "A simple package for calculating statistics."
readme = "README.md"
keywords = ["canbula", "statistics"]
requires-python = ">=3.6.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/canbula/boracanbula"
